fixed launch script